  --hwaccel_dec_blocked=VP9:0
  This will tell FFmpegfs to decode the file in software. To block VP9
  as a whole, the parameter would be --hwaccel_dec_blocked=VP9. To block
  both profile 0 and 1, use --hwaccel_dec_blocked=VP9:0:1.
  The parameter can be repeated to block even more codecs.
* Bugfix: Issue #96: Fixed potential buffer overrun and crash when reading
  corrupted input files.

Important changes in 2.6 (2021-09-04):

* No new features, just a bugfix. See V2.4 for details. 

Important changes in 2.5 (2021-06-18)

* Feature: Issue #63 - Hardware acceleration for encoding/decoding is partly 
  implemented, VAAPI/MMAL/OMX/V4L2 are currently available only.
  - Supported hardware: V4L2/VAAPI (Intel) and V4L2/MMAL/OMX (Raspberry).
  - VAAPI: H264, H265/HEVC, MPEG-2 and VP-8 decoding and H264 encoding.
  - VAAPI: MJPEG and VC-9 do not work (yet).
  - MMAL: H264, MPEG-2, MPEG-4 and VC1 decoding.
  - OMX: H264 encoding.
  - V4L2: H263, H264, H265, MPEG1/2/4, VC-1, VP8/9 encoding/decoding.
* Feature: Added unit tests for hardware acceleration. Failing tests will
           report as SKIPPED and not fail the whole test.
* Note: Which hardware en/decoder actually works depends on what your hardware
        supports.
* Call for testers: Have a CUDA capable graphics adapter and interested in
  testing? Please write me an E-Mail.

Important changes in 2.4 (2021-09-04)

* Bugfix: Issue #90: Make sure that one keyframe gets inserted at the start of
          each HLS segment.

Important changes in 2.3 (2021-06-11)

* Enhancement: Issue #80: Open input video codec only if target supports
  video. Saves resources: no need to decode video frames if not used.
* Enhancement: Issue #81: If source format has no audio, and the target supports
  no video (e.g.WAV/MP3), the files have shown up zero sized. These will now not
  be visible when doing ls. When trying to open them "File not found" will be
  returned.